# CFD

./: CMakeLists.txt  Implicit_Euler.m  Warming_Beam.py  hw3_2020013283.rar  hw4.tex  plot.py  q3.py
Lax_Wendroff/: output_step_0.txt  output_step_20.txt  output_step_200.txt  output_step_2000.txt
Three_Order/: output_step_20.txt  output_step_200.txt  output_step_2000.txt
UpWind/: output_step_20.txt  output_step_200.txt  output_step_2000.txt
Warming_Beam/: output_step_0.txt  output_step_20.txt  output_step_200.txt  output_step_2000.txt
final/: NACA_0012.txt  generate_grid.py  orthogonal.py  simple.py  spacing.py  test.py  u_2000.npy  v_2000.npy
hw6/: shock_wave.m
hw7/: shock_wave.m
hw8/: TVD_Runge_kutta.m
include/: Implicit_Euler.h  Lax_Wendroff.h  Three_Order.h  Warming_Beam.h  upwind.h
midterm/: Q2_1.py  Q2_2.py  Q3_2.py  Q4.py  Q4_2.py  UpWind.py  finite_difference.py
output/: t_0.0.txt  t_0.1.txt  t_1.0.txt  t_10.0.txt
src/: Implicit_Euler.cpp  Lax_Wendroff.cpp  Three_Order.cpp  Warming_Beam.cpp  main.cpp  upwind.cpp
